--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <title>Title</title>
+  <-- link to tyyli stylesheet -- >
+    <link rel="stylesheet" type="text/css" href="/css/tyyli.css">
   </head>
   
   <body>
